[package]
name = "observer-effect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5"}
nokhwa = { version = "0.9.4", features = ["input-v4l", "input-msmf", "input-avfoundation"]}
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"]}